[gd_scene load_steps=12 format=2]

[ext_resource path="res://weapons/Sparkle.gd" type="Script" id=1]
[ext_resource path="res://media/textures/PNG (Transparent)/star_01.png" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.807843, 0.188235, 0.188235, 0 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 0.02, 0.02, 100 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.956863, 0.415686, 0.415686, 1 )

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.956863, 0.415686, 0.415686, 1 ), Color( 0.513726, 0.466667, 0.466667, 0.333333 ), Color( 0.819608, 0.0392157, 0.0392157, 0 ) ]
}

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.0197368, 0.7 ), 0.0, 0.0, 0, 0, Vector2( 0.572368, 0.881818 ), -0.345455, -0.345455, 0, 0, Vector2( 1, 0.0545454 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector3( 0, 0, 1 )
spread = 18.84
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
damping = 2.33
angle = 100.0
angle_random = 0.9
scale_curve = SubResource( 6 )
color = Color( 0.788235, 0.352941, 0.352941, 1 )
hue_variation = 0.6
hue_variation_random = 0.66

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.627451, 0.337255, 0.337255, 1 )
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=9]
material = SubResource( 8 )
size = Vector2( 0.4, 0.4 )

[node name="Sparkle" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 4 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
cast_to = Vector3( 0, 0, -100 )

[node name="hit_particles" type="Particles" parent="."]
emitting = false
amount = 20
lifetime = 0.3
one_shot = true
explosiveness = 0.85
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
